Saving UDIM tiled texture as OpenEXR saves only the first tile #75234

Closed
opened 2020-03-31 00:08:34 +02:00 by Sam Van Hulle · 10 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19

Blender Version
Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: 375c7dc4ca

Short description of error
When creating a new tiled image texture, saving it as OpenEXR only stores the first tile, causing Blender to delete all others.
For some reason PNG does seem to work.

Exact steps for others to reproduce the error

  • Create a new, tiled image texture, and add multiple tiles.
  • Paint on them just to give Blender data to save.
  • Press Save on the Image tab in the Image Editor, and choose OpenEXR as the file format. I chose Float (Half) and ZIP compression. Multi-layer is obviously unnecessary here.
  • Only the first tile gets saved, all others have disappeared.
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19 **Blender Version** Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: `375c7dc4ca` **Short description of error** When creating a new tiled image texture, saving it as OpenEXR only stores the first tile, causing Blender to delete all others. For some reason PNG does seem to work. **Exact steps for others to reproduce the error** - Create a new, tiled image texture, and add multiple tiles. - Paint on them just to give Blender data to save. - Press Save on the Image tab in the Image Editor, and choose OpenEXR as the file format. I chose Float (Half) and ZIP compression. Multi-layer is obviously unnecessary here. - Only the first tile gets saved, all others have disappeared.
Author

Added subscriber: @frameshift

Added subscriber: @frameshift

Added subscriber: @crantisz

Added subscriber: @crantisz

Can confirm

Operating system: Linux-5.3.0-42-generic-x86_64-with-Ubuntu-19.10-eoan 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21
Broken: version: 2.83 (sub 11)

Can confirm Operating system: Linux-5.3.0-42-generic-x86_64-with-Ubuntu-19.10-eoan 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21 Broken: version: 2.83 (sub 11)
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can also confirm.

Can also confirm.
Philipp Oeser self-assigned this 2020-03-31 11:14:08 +02:00
Member

Looks like BKE_image_signal(bmain, ima, NULL, IMA_SIGNAL_COLORMANAGE) will kill the image cache [which causes this issue].
Not totally sure, but let me see what I can do...

Looks like `BKE_image_signal(bmain, ima, NULL, IMA_SIGNAL_COLORMANAGE)` will kill the image cache [which causes this issue]. Not totally sure, but let me see what I can do...
Philipp Oeser changed title from Saving tiled texture as OpenEXR saves only the first tile to Saving UDIM tiled texture as OpenEXR saves only the first tile 2020-03-31 11:14:30 +02:00

This issue was referenced by 029a714fc7

This issue was referenced by 029a714fc72d79a4dc8d80c3397c308112a7fea9
Author

Awesome! You sure work fast, @lichtwerk

Awesome! You sure work fast, @lichtwerk
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75234
No description provided.